// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stegviser skal vise riktig steg 1 1`] = `
<div>
  <fieldset
    aria-invalid="false"
    class="skjemagruppe"
  >
    <div
      class="stegindikator"
    >
      <ol
        class="stegindikator__liste"
      >
        <li
          aria-current="step"
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--aktiv"
            title="steg.OmDeg"
          >
            <div
              class="stegindikator__steg-num"
            >
              1
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.OmDegOgAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              2
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.OmAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              3
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.DinSituasjon"
          >
            <div
              class="stegindikator__steg-num"
            >
              4
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.OmBarn"
          >
            <div
              class="stegindikator__steg-num"
            >
              5
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.Oppsummering"
          >
            <div
              class="stegindikator__steg-num"
            >
              6
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      aria-live="polite"
      id="297830683-1565-8767-8061-100202731827372"
    />
  </fieldset>
</div>
`;

exports[`Stegviser skal vise riktig steg 2 1`] = `
<div>
  <fieldset
    aria-invalid="false"
    class="skjemagruppe"
  >
    <div
      class="stegindikator"
    >
      <ol
        class="stegindikator__liste"
      >
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDeg"
          >
            <div
              class="stegindikator__steg-num"
            >
              1
            </div>
          </div>
        </li>
        <li
          aria-current="step"
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--aktiv"
            title="steg.OmDegOgAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              2
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.OmAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              3
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.DinSituasjon"
          >
            <div
              class="stegindikator__steg-num"
            >
              4
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.OmBarn"
          >
            <div
              class="stegindikator__steg-num"
            >
              5
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.Oppsummering"
          >
            <div
              class="stegindikator__steg-num"
            >
              6
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      aria-live="polite"
      id="77566275-3392-3234-0246-67212675818066"
    />
  </fieldset>
</div>
`;

exports[`Stegviser skal vise riktig steg 3 1`] = `
<div>
  <fieldset
    aria-invalid="false"
    class="skjemagruppe"
  >
    <div
      class="stegindikator"
    >
      <ol
        class="stegindikator__liste"
      >
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDeg"
          >
            <div
              class="stegindikator__steg-num"
            >
              1
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDegOgAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              2
            </div>
          </div>
        </li>
        <li
          aria-current="step"
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--aktiv"
            title="steg.OmAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              3
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.DinSituasjon"
          >
            <div
              class="stegindikator__steg-num"
            >
              4
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.OmBarn"
          >
            <div
              class="stegindikator__steg-num"
            >
              5
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.Oppsummering"
          >
            <div
              class="stegindikator__steg-num"
            >
              6
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      aria-live="polite"
      id="898801865-14271-04456-26964-5978681014614"
    />
  </fieldset>
</div>
`;

exports[`Stegviser skal vise riktig steg 4 1`] = `
<div>
  <fieldset
    aria-invalid="false"
    class="skjemagruppe"
  >
    <div
      class="stegindikator"
    >
      <ol
        class="stegindikator__liste"
      >
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDeg"
          >
            <div
              class="stegindikator__steg-num"
            >
              1
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDegOgAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              2
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              3
            </div>
          </div>
        </li>
        <li
          aria-current="step"
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--aktiv"
            title="steg.DinSituasjon"
          >
            <div
              class="stegindikator__steg-num"
            >
              4
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.OmBarn"
          >
            <div
              class="stegindikator__steg-num"
            >
              5
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.Oppsummering"
          >
            <div
              class="stegindikator__steg-num"
            >
              6
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      aria-live="polite"
      id="699610337-21353-6383-5432-0197396829456"
    />
  </fieldset>
</div>
`;

exports[`Stegviser skal vise riktig steg 5 1`] = `
<div>
  <fieldset
    aria-invalid="false"
    class="skjemagruppe"
  >
    <div
      class="stegindikator"
    >
      <ol
        class="stegindikator__liste"
      >
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDeg"
          >
            <div
              class="stegindikator__steg-num"
            >
              1
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDegOgAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              2
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              3
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.DinSituasjon"
          >
            <div
              class="stegindikator__steg-num"
            >
              4
            </div>
          </div>
        </li>
        <li
          aria-current="step"
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--aktiv"
            title="steg.OmBarn"
          >
            <div
              class="stegindikator__steg-num"
            >
              5
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner"
            title="steg.Oppsummering"
          >
            <div
              class="stegindikator__steg-num"
            >
              6
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      aria-live="polite"
      id="0232415311-4355-16694-25074-1486744308835"
    />
  </fieldset>
</div>
`;

exports[`Stegviser skal vise riktig steg 6 1`] = `
<div>
  <fieldset
    aria-invalid="false"
    class="skjemagruppe"
  >
    <div
      class="stegindikator"
    >
      <ol
        class="stegindikator__liste"
      >
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDeg"
          >
            <div
              class="stegindikator__steg-num"
            >
              1
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmDegOgAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              2
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmAvdoed"
          >
            <div
              class="stegindikator__steg-num"
            >
              3
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.DinSituasjon"
          >
            <div
              class="stegindikator__steg-num"
            >
              4
            </div>
          </div>
        </li>
        <li
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--ferdig"
            title="steg.OmBarn"
          >
            <div
              class="stegindikator__steg-num"
            >
              5
            </div>
          </div>
        </li>
        <li
          aria-current="step"
          class="stegindikator__steg"
        >
          <div
            class="stegindikator__steg-inner stegindikator__steg-inner--aktiv"
            title="steg.Oppsummering"
          >
            <div
              class="stegindikator__steg-num"
            >
              6
            </div>
          </div>
        </li>
      </ol>
    </div>
    <div
      aria-live="polite"
      id="75270683-30946-1337-30841-234621262308658"
    />
  </fieldset>
</div>
`;
